2009-05-06
	* add arguments to UpdateTableWidget() to sort the items according to name or time -> by default, f-cat and c-cat are sorted by name.
	* Can edit a selected file (popup menu of Files Tab).
	
2009-05-05
	* add new argument to retrieval().
	* improvement of UpdateWidge to scroll the approriate position.
	* Use UpdateWidge after del/rename files and codes.
	* Improvement of add case button: Scroll to the new added case.
	* Show file property by click .fnames_rqda .FileofCat and .FileofCase.
	* add double click handler of journal widget.
	
2009-05-04
	* Project memo and journal editor will issue a dialogue if the 	memo is changed but not saved.
	* Class button to set class of attributes.
	* GetAttr convert the numeric variable into class of numeric.
	
2009-05-03
	* MemoWidget() will issue a dialogue if the memo is changed but not saved.
	* Improvement of SearchFiles().
	* GetFileName() and UpdateWidget(). UpdateWidget() updates the widget without accessing the database.
	
2009-05-01
	* mergeCodes() to merge the codings of two code, and add to popup menu of coding Tab.
	
2009-04-27
	* Bugfixes of HL_Case() and delete arributes button.
	* Bugfixes: when delete a file, delete related coding, caselinkage and treefile accordingly.
	
2009-04-26
	* "Show selected file property" popup menu.
	* Rd file of GetCaseId, GetCaseName and RQDAQuery.
	
2009-04-24
	* Add more to the popup menu of F-cat Tab (e.g. "move selected files to  F-cat...").
	
2009-04-21
	* Split GetCaseId to GetCaseId and GetCaseName.
	* New function of RQDAQuery to wrap a call to dbGetQuery.
	
2009-04-20
	* New function of GetCaseId(): the name may be changed in the future.
	
2009-04-19
	* New function of GetFileIdSets, can be used to do more complex conditional retrieval.
	
2009-04-18
	* Minor bugfix related to naming with "'".
	* Add "Clean Project" button.
	
2009-04-17
	* Add documents of RQDA2tm.Rd,retrieval.Rd and GetAttr.Rd.

2009-04-16
	* GetFileId() can return fid of selected files now.
	