@@ -3,5 +3,8 @@ export(CleanProject,CrossCode,CrossTwo,gselect.list,GetAttr,GetCaseId,GetCaseNam
        list.deleted,pdelete,relation,retrieval,RQDA,RQDA2tm,RQDAQuery,
        SearchFiles,ShowSubset,SummaryCoding,undelete,write.FileList)
 S3method(print,SummaryCoding)
+S3method(ShowSubset,default)
+S3method(ShowSubset,CaseAttr)
+S3method(ShowSubset,FileAttr)
 import(RGtk2)
 
