@@ -1,6 +1,7 @@
 2009-05-06
 	* add arguments to UpdateTableWidget() to sort the items according to name or time -> by default, f-cat and c-cat are sorted by name.
-	* Can edit a selected file (popup menu of Files Tab).
+	* Can edit a selected file (popup menu of Files/Case/F-cat Tab).
+	* ShowSubset is generic now.
 	
 2009-05-05
 	* add new argument to retrieval().
